# playwrigth_framework

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  report.html  report.json  report2  report2.html  test_1.py
Allure Report_files/: js
allure-results/: 04b38814-a48a-4931-86a2-459ca785edaf-container.json  0b9e3021-5de0-4292-9cf5-88923f5154cf-container.json  49a6a44c-ed26-495c-919a-91d4962f40f6-attachment.txt  5cad782b-7051-4741-8a97-bcecd4b3009d-container.json  62568e88-8d78-475b-8b43-b8a5b0b62013-result.json  72bca186-ca93-4c67-913c-639f00ebbaeb-result.json  78499591-1a07-4fed-ab87-268b8da9a472-result.json  7e4f301d-4caf-4dcb-aaaa-da2848df341a-result.json  870de095-6d96-47ed-9ae1-b9bfe9a6b670-attachment.txt  a0ba6a5e-99a8-4014-b18d-d83e573c6937-attachment.txt  a0f0a415-18ba-43c0-b44b-938201426bb6-result.json  be4a471e-bd8a-4a47-b6db-31b7b8eef21e-container.json  c83aae72-8828-44b8-865b-b5c1a41ddbdf-result.json  cd07b5ae-da5c-435d-9a97-1c7ab79aa1d3-container.json
tests/: conftest.py  test_1.py  test_2.py  test_basic-HTML-form.py  test_basic-web-page.py  utils.py
