[tool.poetry]
name = "playwrigth-framework"
version = "0.1.0"
description = ""
authors = ["sky <sky012877@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.1"
playwright = "^1.45.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
